[project]
name = "cymap"
version = "0.1.0"
description = "Backend prototype of metrics API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.8",
    "fastapi-azure-auth>=5.0.1",
    "greenlet>=3.1.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.37",
    "sqlalchemy-timescaledb>=0.4.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
